--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
+*.pb filter=lfs diff=lfs merge=lfs -text
+*.index filter=lfs diff=lfs merge=lfs -text
+*.data* filter=lfs diff=lfs merge=lfs -text
